tests/xml/invalidxml/obsTime/badleaptime.xml.README
badleaptime.xml: BAD  obsTime since 2016-06-30T23:59:60 is not a real leap-second
